feat(mobile): sync local deletions to server

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2180,7 +2180,10 @@
   "sync": "Sync",
   "sync_albums": "Sync albums",
   "sync_albums_manual_subtitle": "Sync all uploaded videos and photos to the selected backup albums",
+  "sync_deletions": "Sync deleted photos and videos",
   "sync_local": "Sync Local",
+  "sync_local_deletions_to_server_option_title": "Deleted on device",
+  "sync_local_deletions_to_server_option_description": "Photos and videos that have been deleted in other apps will also be deleted from the server.",
   "sync_remote": "Sync Remote",
   "sync_status": "Sync Status",
   "sync_status_subtitle": "View and manage the sync system",
